dataset1235/2025-2/2868285114/users/2107547248/executions/3071719669_2332513434.log
== SUBMISSION (2025-08-28 22:18:10)
-- CODE: 
valorEmCoroas = float(input())
ValorEmReais = valorEmCoroas * 0.70
print(valorEmReais)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
8
---- correct output:
5.6
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(valorEmReais)
          ^^^^^^^^^^^^
NameError: name 'valorEmReais' is not defined. Did you mean: 'ValorEmReais'?
-- TEST CASE 2:
---- input:
4
---- correct output:
2.8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(valorEmReais)
          ^^^^^^^^^^^^
NameError: name 'valorEmReais' is not defined. Did you mean: 'ValorEmReais'?
-- TEST CASE 3:
---- input:
8
---- correct output:
5.6
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(valorEmReais)
          ^^^^^^^^^^^^
NameError: name 'valorEmReais' is not defined. Did you mean: 'ValorEmReais'?
-- TEST CASE 4:
---- input:
15
---- correct output:
10.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(valorEmReais)
          ^^^^^^^^^^^^
NameError: name 'valorEmReais' is not defined. Did you mean: 'ValorEmReais'?
-- TEST CASE 5:
---- input:
13
---- correct output:
9.1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(valorEmReais)
          ^^^^^^^^^^^^
NameError: name 'valorEmReais' is not defined. Did you mean: 'ValorEmReais'?
-- TEST CASE 6:
---- input:
6
---- correct output:
4.2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(valorEmReais)
          ^^^^^^^^^^^^
NameError: name 'valorEmReais' is not defined. Did you mean: 'ValorEmReais'?
-- TEST CASE 7:
---- input:
9
---- correct output:
6.3
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(valorEmReais)
          ^^^^^^^^^^^^
NameError: name 'valorEmReais' is not defined. Did you mean: 'ValorEmReais'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:11:16)
-- CODE: 
valoremreais = valorEmCoroasDinamarquesa * 0.70
valorEmCoroasDinamarquesa = float(input())
print(round(valoremreais,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
8
---- correct output:
5.6
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    valoremreais = valorEmCoroasDinamarquesa * 0.70
                   ^^^^^^^^^^^^^^^^^^^^^^^^^
NameError: name 'valorEmCoroasDinamarquesa' is not defined
-- TEST CASE 2:
---- input:
4
---- correct output:
2.8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    valoremreais = valorEmCoroasDinamarquesa * 0.70
                   ^^^^^^^^^^^^^^^^^^^^^^^^^
NameError: name 'valorEmCoroasDinamarquesa' is not defined
-- TEST CASE 3:
---- input:
8
---- correct output:
5.6
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    valoremreais = valorEmCoroasDinamarquesa * 0.70
                   ^^^^^^^^^^^^^^^^^^^^^^^^^
NameError: name 'valorEmCoroasDinamarquesa' is not defined
-- TEST CASE 4:
---- input:
15
---- correct output:
10.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    valoremreais = valorEmCoroasDinamarquesa * 0.70
                   ^^^^^^^^^^^^^^^^^^^^^^^^^
NameError: name 'valorEmCoroasDinamarquesa' is not defined
-- TEST CASE 5:
---- input:
13
---- correct output:
9.1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    valoremreais = valorEmCoroasDinamarquesa * 0.70
                   ^^^^^^^^^^^^^^^^^^^^^^^^^
NameError: name 'valorEmCoroasDinamarquesa' is not defined
-- TEST CASE 6:
---- input:
6
---- correct output:
4.2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    valoremreais = valorEmCoroasDinamarquesa * 0.70
                   ^^^^^^^^^^^^^^^^^^^^^^^^^
NameError: name 'valorEmCoroasDinamarquesa' is not defined
-- TEST CASE 7:
---- input:
9
---- correct output:
6.3
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    valoremreais = valorEmCoroasDinamarquesa * 0.70
                   ^^^^^^^^^^^^^^^^^^^^^^^^^
NameError: name 'valorEmCoroasDinamarquesa' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:18:44)
-- CODE: 
valorEmCoroas = float(input())
ValorEmReais = valorEmCoroas * 0.70
print(round(valorEmReais,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
8
---- correct output:
5.6
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(valorEmReais,2))
                ^^^^^^^^^^^^
NameError: name 'valorEmReais' is not defined. Did you mean: 'ValorEmReais'?
-- TEST CASE 2:
---- input:
4
---- correct output:
2.8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(valorEmReais,2))
                ^^^^^^^^^^^^
NameError: name 'valorEmReais' is not defined. Did you mean: 'ValorEmReais'?
-- TEST CASE 3:
---- input:
8
---- correct output:
5.6
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(valorEmReais,2))
                ^^^^^^^^^^^^
NameError: name 'valorEmReais' is not defined. Did you mean: 'ValorEmReais'?
-- TEST CASE 4:
---- input:
15
---- correct output:
10.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(valorEmReais,2))
                ^^^^^^^^^^^^
NameError: name 'valorEmReais' is not defined. Did you mean: 'ValorEmReais'?
-- TEST CASE 5:
---- input:
13
---- correct output:
9.1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(valorEmReais,2))
                ^^^^^^^^^^^^
NameError: name 'valorEmReais' is not defined. Did you mean: 'ValorEmReais'?
-- TEST CASE 6:
---- input:
6
---- correct output:
4.2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(valorEmReais,2))
                ^^^^^^^^^^^^
NameError: name 'valorEmReais' is not defined. Did you mean: 'ValorEmReais'?
-- TEST CASE 7:
---- input:
9
---- correct output:
6.3
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(valorEmReais,2))
                ^^^^^^^^^^^^
NameError: name 'valorEmReais' is not defined. Did you mean: 'ValorEmReais'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:06:09)
-- CODE: 
valoremreais = valoremcoroas * 0,70
valoremcoroas = float(input())
print(round(valoremreais()))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
8
---- correct output:
5.6
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    valoremreais = valoremcoroas * 0,70
                   ^^^^^^^^^^^^^
NameError: name 'valoremcoroas' is not defined
-- TEST CASE 2:
---- input:
4
---- correct output:
2.8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    valoremreais = valoremcoroas * 0,70
                   ^^^^^^^^^^^^^
NameError: name 'valoremcoroas' is not defined
-- TEST CASE 3:
---- input:
8
---- correct output:
5.6
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    valoremreais = valoremcoroas * 0,70
                   ^^^^^^^^^^^^^
NameError: name 'valoremcoroas' is not defined
-- TEST CASE 4:
---- input:
15
---- correct output:
10.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    valoremreais = valoremcoroas * 0,70
                   ^^^^^^^^^^^^^
NameError: name 'valoremcoroas' is not defined
-- TEST CASE 5:
---- input:
13
---- correct output:
9.1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    valoremreais = valoremcoroas * 0,70
                   ^^^^^^^^^^^^^
NameError: name 'valoremcoroas' is not defined
-- TEST CASE 6:
---- input:
6
---- correct output:
4.2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    valoremreais = valoremcoroas * 0,70
                   ^^^^^^^^^^^^^
NameError: name 'valoremcoroas' is not defined
-- TEST CASE 7:
---- input:
9
---- correct output:
6.3
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    valoremreais = valoremcoroas * 0,70
                   ^^^^^^^^^^^^^
NameError: name 'valoremcoroas' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:20:18)
-- CODE: 
valorEmCoroas = float(input())
valorEmReais = valorEmCoroas * 0.70
print(round(valorEmReais,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
8
---- correct output:
5.6
---- user output:
5.6
-- TEST CASE 2:
---- input:
4
---- correct output:
2.8
---- user output:
2.8
-- TEST CASE 3:
---- input:
8
---- correct output:
5.6
---- user output:
5.6
-- TEST CASE 4:
---- input:
15
---- correct output:
10.5
---- user output:
10.5
-- TEST CASE 5:
---- input:
13
---- correct output:
9.1
---- user output:
9.1
-- TEST CASE 6:
---- input:
6
---- correct output:
4.2
---- user output:
4.2
-- TEST CASE 7:
---- input:
9
---- correct output:
6.3
---- user output:
6.3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
